--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           </h2>
 
           <ul class="wrap our-services flex-container-row">
+            git push --set-upstream master master
             <li class="flex-container-row">
               <img src="img/articles/1.png" width="32" height="32" alt="" />
 
