--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -28,7 +30,6 @@
           </h2>
 
           <ul class="wrap our-services flex-container-row">
-            git push --set-upstream master master
             <li class="flex-container-row">
               <img src="img/articles/1.png" width="32" height="32" alt="" />
 
