--- a/index.html
+++ b/index.html
@@ -30,70 +30,58 @@
           </h2>
 
           <ul class="wrap our-services flex-container-row">
-            <li class="flex-container-row">
-              <img src="img/articles/1.png" width="32" height="32" alt="" />
-
-              <div class="flex-container-column">
+            <li class="photography-service">
+              <section>
                 <h3>Photography</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor.
                 </p>
-              </div>
+              </section>
             </li>
-            <li class="flex-container-row">
-              <img src="img/articles/2.png" width="32" height="32" alt="" />
-
-              <div class="flex-container-column">
+            <li class="webdesign-service">
+              <section>
                 <h3>Web Design</h3>
                 <p>
                   Ipsum dolor sit amet, consectetur adipiscing elit, sed do
                   eiusmod tempor.
                 </p>
-              </div>
+              </section>
             </li>
-            <li class="flex-container-row">
-              <img src="img/articles/4.png" width="32" height="32" alt="" />
-
-              <div class="flex-container-column">
+            <li class="creativity-service">
+              <section>
                 <h3>Creativity</h3>
                 <p>
                   Dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                   tempor.
                 </p>
-              </div>
+              </section>
             </li>
-            <li class="flex-container-row">
-              <img src="img/articles/4.png" width="32" height="32" alt="" />
-
-              <div class="flex-container-column">
+            <li class="seo-service">
+              <section>
                 <h3>seo</h3>
                 <p>
                   Ipsum dolor sit amet, consectetur adipiscing elit, sed do
                   eiusmod.
                 </p>
-              </div>
+              </section>
             </li>
-            <li class="flex-container-row">
-              <img src="img/articles/5.png" width="32" height="32" alt="" />
-
-              <div class="flex-container-column">
+            <li class="css-service">
+              <section>
                 <h3>Css/Html</h3>
                 <p>
                   Lorem dolor sit amet, consectetur adipiscing elit, sed do
                   tempor.
                 </p>
-              </div>
+              </section>
             </li>
-            <li class="flex-container-row">
-              <img src="img/articles/6.png" width="32" height="32" alt="" />
-
-              <div class="flex-container-column">
+            <li class="digital-service">
+              <section>
                 <h3>digital</h3>
                 <p>
                   Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
                 </p>
-              </div>
+              </section>
             </li>
           </ul>
         </div>
@@ -111,7 +99,7 @@
 
           <ul>
             <li class="person">
-              <div class="person-image">
+              <div class="person-wrap">
                 <div class="person-image-gradient">
                   <div class="social-icons-wrap">
                     <button class="icon-facebook" disabled></button>
@@ -121,16 +109,14 @@
                   </div>
                 </div>
                 <img class="person-img" src="img/team/1.png" alt="" />
-                <div class="person-overlay"></div>
               </div>
-
               <h4>
                 Matthew Dix
               </h4>
               <p>Graphic Design</p>
             </li>
             <li class="person">
-              <div class="person-image">
+              <div class="person-wrap">
                 <div class="person-image-gradient">
                   <div class="social-icons-wrap">
                     <button class="icon-facebook" disabled></button>
@@ -140,7 +126,6 @@
                   </div>
                 </div>
                 <img class="person-img" src="img/team/2.png" alt="" />
-                <div class="person-overlay"></div>
               </div>
 
               <h4>
@@ -149,7 +134,7 @@
               <p>Branding/UX design</p>
             </li>
             <li class="person">
-              <div class="person-image">
+              <div class="person-wrap">
                 <div class="person-image-gradient">
                   <div class="social-icons-wrap">
                     <button class="icon-facebook" disabled></button>
@@ -159,7 +144,6 @@
                   </div>
                 </div>
                 <img class="person-img" src="img/team/3.png" alt="" />
-                <div class="person-overlay"></div>
               </div>
 
               <h4>
