--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
               <div class="person-wrap">
                 <div class="person-image-gradient">
                   <div class="social-icons-wrap">
-                    <button class="icon-facebook" disabled></button>
-                    <button class="icon-pinterest" disabled></button>
-                    <button class="icon-twitter" disabled></button>
-                    <button class="icon-instagram" disabled></button>
+                    <a class="icon-facebook" href="#"></a>
+                    <a class="icon-pinterest" href="#"></a>
+                    <a class="icon-twitter" href="#"></a>
+                    <a class="icon-instagram" href="#"></a>
                   </div>
                 </div>
                 <img class="person-img" src="img/team/1.png" alt="" />
@@ -119,10 +119,10 @@
               <div class="person-wrap">
                 <div class="person-image-gradient">
                   <div class="social-icons-wrap">
-                    <button class="icon-facebook" disabled></button>
-                    <button class="icon-pinterest" disabled></button>
-                    <button class="icon-twitter" disabled></button>
-                    <button class="icon-instagram" disabled></button>
+                    <a class="icon-facebook" href="#"></a>
+                    <a class="icon-pinterest" href="#"></a>
+                    <a class="icon-twitter" href="#"></a>
+                    <a class="icon-instagram" href="#"></a>
                   </div>
                 </div>
                 <img class="person-img" src="img/team/2.png" alt="" />
@@ -137,10 +137,10 @@
               <div class="person-wrap">
                 <div class="person-image-gradient">
                   <div class="social-icons-wrap">
-                    <button class="icon-facebook" disabled></button>
-                    <button class="icon-pinterest" disabled></button>
-                    <button class="icon-twitter" disabled></button>
-                    <button class="icon-instagram" disabled></button>
+                    <a class="icon-facebook" href="#"></a>
+                    <a class="icon-pinterest" href="#"></a>
+                    <a class="icon-twitter" href="#"></a>
+                    <a class="icon-instagram" href="#"></a>
                   </div>
                 </div>
                 <img class="person-img" src="img/team/3.png" alt="" />
